# xUnit-example

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
xunit_example/: TestCase.py  TestCaseTest.py  TestResult.py  TestSuite.py  WasRun.py  test.py  xunit.py
